# mineru-tianshu

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  manifest.yaml  mineru-tianshu.difypkg  pyproject.toml  requirements.txt
.github/workflows/: plugin-publish.yml  release.yml
provider/: mineru-tianshu.py  mineru-tianshu.yaml
readme/: README_zh_Hans.md
tests/: README.md  __init__.py  conftest.py  test_get_parse_result.py  test_parse_document.py  test_parse_document_async.py
tools/: get_parse_result.py  get_parse_result.yaml  parse_document.py  parse_document.yaml  parse_document_async.py  parse_document_async.yaml
